# clnplugin-clj

./: .gitignore  Makefile  README.org  deps.edn  pyproject.toml
docs/: docs.org
docs/assets/: np  one.css
docs/public/: index.html
pytest/: deps.edn  test_clnplugin_clj.py
pytest/plugins/: async  async.clj  async_max_parallel_reqs  async_max_parallel_reqs.clj  async_sync  async_sync.clj  deprecated_options  deprecated_options.clj  deps.edn  dynamic_options  dynamic_options.clj  errors  errors.clj  featurebits  featurebits.clj  foo  foo.clj  getmanifest_fn_not_a_function  getmanifest_fn_not_a_function.clj  getmanifest_fn_not_defined  getmanifest_fn_not_defined.clj  getmanifest_fn_symbol_not_a_function  getmanifest_fn_symbol_not_a_function.clj  getmanifest_getinfo_internal_method  getmanifest_getinfo_internal_method.clj  getmanifest_notifications_do_not_declare_log  getmanifest_notifications_do_not_declare_log.clj  getmanifest_options_mutli_dynamic  getmanifest_options_mutli_dynamic.clj  getmanifest_peer_connected_hook  getmanifest_peer_connected_hook.clj  hooks_peer_connected_bar  hooks_peer_connected_bar.clj  hooks_peer_connected_baz  hooks_peer_connected_baz.clj  hooks_peer_connected_foo  hooks_peer_connected_foo.clj  init  init.clj  init_disable  (+40 more)
pytest/plugins/java/: build.clj  deps.edn
pytest/plugins/java/src/: myplugin.clj
pytest/plugins/src/: rpc.clj
src/: clnplugin_clj.clj  clnplugin_utils.clj
test/: clnplugin_clj_test.clj
tools/: np
